@@ -4,3 +4,6 @@ from coverage import CoveragePlugin
 
 class Plugin(CoveragePlugin):
     pass
+
+def coverage_init(reg, options):
+    reg.add_file_tracer(Plugin(options))
